--- a/appinfo.json
+++ b/appinfo.json
@@ -7,6 +7,7 @@
   "sdkVersion": "3",
   "targetPlatforms": ["basalt", "chalk"],
   "enableMultiJS": true,
+  "capabilities": ["health"],  
   "watchapp": {
     "watchface": false
   },
